@@ -3,6 +3,7 @@ package uk.ac.ebi.pride.gui.util;
 import javax.swing.*;
 import java.awt.*;
 import java.net.URI;
+import java.io.IOException;
 
 /**
  * Http utility class
@@ -19,21 +20,26 @@ public class HttpUtil {
             if (osName.startsWith("Mac OS")) {
                 Desktop.getDesktop().browse(URI.create(url));
             } else if (osName.startsWith("Windows")) {
-                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+                // Use ProcessBuilder for Windows
+                ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "start", url);
+                pb.start();
             } else { //assume Unix or Linux
                 String[] browsers = {"firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape"};
                 String browser = null;
 
-                for (int count = 0; count < browsers.length && browser == null; count++) {
-                    if (Runtime.getRuntime().exec(new String[]{"which", browsers[count]}).waitFor() == 0) {
-                        browser = browsers[count];
+                for (String browserName : browsers) {
+                    ProcessBuilder pb = new ProcessBuilder("which", browserName);
+                    if (pb.start().waitFor() == 0) {
+                        browser = browserName;
+                        break;
                     }
                 }
 
                 if (browser == null) {
-                    throw new Exception("Could not find web browser");
+                    throw new IOException("Could not find web browser");
                 } else {
-                    Runtime.getRuntime().exec(new String[]{browser, url});
+                    ProcessBuilder pb = new ProcessBuilder(browser, url);
+                    pb.start();
                 }
             }
         } catch (Exception e) {
